--- a/css/common.css
+++ b/css/common.css
@@ -66,9 +66,9 @@
 .cam_wrap {
     /* background-color: yellow; */
     /* width: 90%; */
-    width: calc(100% - 90px);
+    width: calc(100% - 80px);
     /* padding: 0 20px; */
-    padding-left: 10px;
+    padding-left: 5px;
     height: 100%;
     margin-top: 140px;
     margin-left: 55px;
@@ -79,11 +79,8 @@
 
 /* 전체멤일때 */
 .cam_all {
-    /* 반응형으로 만들때 이부분 수정 */
     display: grid;
-    /* 4개의 열을 균등한 너비로 설정 */
     grid-template-columns: repeat(4, 1fr);
-    /* 박스들 사이의 간격 설정 */
     gap: 20px 20px;
     padding-bottom: 50px;
 }
@@ -93,7 +90,6 @@
 .cam_one_by_one {
     grid-template-columns: repeat(2, 1fr);
     gap: 20px 20px;
-    /* padding-bottom: 300px; */
 }
 
 /* 1:1 멤일때 길이수정 */
@@ -102,7 +98,6 @@
 }
 
 /* 내 캠 */
-/* 내 이미지 기본 보정일때 */
 #videoElement {
     width: 100%;
     overflow: hidden;
@@ -169,7 +164,6 @@
     width: 100%;
     height: 100%;
     object-fit: cover;
-    /* 커버 모드로 설정합니다. */
 }
 
 
@@ -218,9 +212,6 @@
     box-shadow: 0px 0px 3px #000000;
 }
 
-.mem_mute_mic {
-    /* display: none; */
-}
 
 /* 뮤트마이크 */
 .mute_mic img {
@@ -236,15 +227,7 @@
 
 
 
-
-/* ================================================ */
-
-
-
-
 html {
-    /* height: 100%; */
-    /* background-color: #090a0f; */
     background: url('../img/bg.jpg?ver=2ewdw2')center center / cover;
     height: 100vh;
 }
@@ -328,7 +311,7 @@ html {
     text-align: center;
     cursor: move;
     position: absolute;
-    left: 75px;
+    left: 70px;
     top: 40px;
     border-radius: 10px;
     z-index: 500;
@@ -386,20 +369,16 @@ html {
     flex-wrap: wrap;
     flex-direction: column;
     justify-content: flex-start;
-    /* line-height 없어서, IOS에서 높이값 못갖고 잘려보임*/
-    /* line-height: 1; */
     line-height: 1.3;
 }
 
 
 .bgm_name {
-    /* display: block; */
     color: #fff;
     font-size: 1.6rem;
 }
 
 
-/* none으로 살려놔야 타임바 보임 */
 .bgm_time {
     display: none;
 }
@@ -407,84 +386,6 @@ html {
 #bgm-audio {
     display: none;
 }
-
-
-
-
-/* 브금 로딩 */
-
-/* .loading_cir {
-    width: 100%;
-    height: 100%;
-    display: inline-block;
-    position: absolute;
-    top: 20px;
-    left: 0;
-}
-
-.loading_cir i {
-    font-size: 2rem;
-    color: #fff;
-    display: inline-block;
-    animation-name: loading_circle;
-    animation-duration: 5s;
-    animation-iteration-count: infinite;
-    animation-timing-function: linear;
-    display: inline-block;
-    width: -7px;
-
-
-}
-
-@keyframes loading_circle {
-    0% {
-        rotate: 0deg;
-    }
-
-    100% {
-        rotate: 360deg;
-    }
-}
-
-
- */
-
-
-
-/* 
-
-
-#hideBtn {
-    position: absolute;
-    top: 220px;
-    left: 50%;
-    transform: translateX(-50%);
-    z-index: 500;
-}
-
-#hideBtn {
-    position: absolute;
-    top: 220px;
-    left: 50%;
-    transform: translateX(-50%);
-    z-index: 500;
-} */
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 
 
@@ -503,7 +404,6 @@ header {
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.671);
     width: calc(100% - 50px);
     left: 65px;
-    /* background-color: rgba(0, 0, 0, 0.3); */
     background-color: #0000008a;
 }
 
@@ -516,7 +416,6 @@ header {
 .title {
     color: #f1f1f1;
     font-size: 1.6rem;
-    /* font-weight: 400; */
     padding-right: 20px;
 }
 
@@ -677,20 +576,16 @@ main {
     border-radius: 50%;
     width: 20px;
     height: 20px;
-    /* box-shadow: 0px 0px 5px  rgb(83, 13, 166); */
-    /* 기본 none상태 - 해당 페이지임에 따라 block시킴*/
     display: none;
 
 }
 
 .speak_act::after {
-    /* position: fixed; */
     content: '';
     display: block;
     width: 100%;
     height: 100%;
     box-shadow: 0px 0px 15px rgba(163, 88, 255, 0.993);
-    /* box-shadow: 0px 0px 10px rgb(255, 0, 0); */
     animation: ripple 1.5s infinite;
     position: static;
     top: -10px;
@@ -730,242 +625,6 @@ main {
     z-index: 20;
 }
 
-/* ---------- 배경 숨쉬는 Lavalamp ---------- */
-/* ---------- 배경 숨쉬는 Lavalamp ---------- */
-/* ---------- 배경 숨쉬는 Lavalamp ---------- */
-
-body {
-    background: transparent;
-}
-
-
-.main_lava_bg {
-    width: 100%;
-    height: 0;
-    /* background-color: rgba(240, 248, 255, 0.151); */
-}
-
-.lamp {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    height: 100vh;
-    height: 100vh;
-    width: 100vw;
-    min-width: 100vw;
-    z-index: -1;
-}
-
-.lava {
-    filter: url("#goo");
-    position: absolute;
-    height: 100%;
-    width: 100%;
-    top: 0;
-    left: 0;
-}
-
-.blob {
-    border-radius: 50%;
-    background: #661BAC;
-
-    position: absolute;
-    /* 이거 잘건드리면 불꽃가능 */
-    filter: blur(100px);
-    box-shadow: #1a0197 0px 0px 2px 20px;
-}
-
-
-.blob.top {
-    border-radius: 50%;
-    width: 100%;
-    height: 4%;
-    top: -3%;
-    left: 0;
-
-}
-
-.blob.bottom {
-    border-radius: 50%;
-    width: 100%;
-    height: 4%;
-    bottom: -3%;
-    left: 0;
-}
-
-.blob:nth-child(1) {
-    width: 200px;
-    height: 200px;
-    left: 35%;
-    bottom: -15%;
-
-    animation: wobble 4s ease-in-out alternate infinite, blob-one ease-in-out 13s infinite;
-}
-
-.blob:nth-child(2) {
-    width: 330px;
-    height: 330px;
-    right: 24%;
-    bottom: -65%;
-
-    animation: wobble 5s ease-in-out alternate infinite, blob-two ease-in-out 22s infinite;
-
-
-
-}
-
-.blob:nth-child(3) {
-    width: 150px;
-    height: 150px;
-    bottom: -15%;
-    left: 34%;
-
-    animation: wobble 6s ease-in-out alternate infinite, blob-three ease-in-out 16s infinite;
-}
-
-.blob:nth-child(4) {
-    width: 235px;
-    height: 235px;
-    bottom: -19%;
-    left: 30%;
-
-    animation: wobble 7s ease-in-out alternate infinite, blob-four ease-in-out 12s infinite;
-}
-
-.blob:nth-child(4) {
-    width: 235px;
-    height: 235px;
-    bottom: -19%;
-    left: 30%;
-    animation: wobble 8s ease-in-out alternate infinite, blob-four ease-in-out 12s infinite;
-}
-
-.blob:nth-child(5) {
-    width: 55px;
-    height: 55px;
-    bottom: -25%;
-    left: 34%;
-
-    animation: wobble 9s ease-in-out alternate infinite, blob-five ease-in-out 32s infinite;
-}
-
-.blob:nth-child(6) {
-    width: 35px;
-    height: 35px;
-    bottom: -25%;
-    right: 34%;
-
-    animation: wobble 10s ease-in-out alternate infinite, blob-six ease-in-out 12s infinite;
-}
-
-.blob:nth-child(7) {
-    width: 435px;
-    height: 435px;
-    bottom: -85%;
-    right: 40%;
-
-    animation: wobble 11s ease-in-out alternate infinite, blob-seven ease-in-out 32s infinite;
-}
-
-@keyframes blob-one {
-
-    0%,
-    100% {
-        transform: translatey(0);
-    }
-
-    50% {
-        transform: translatey(-700%);
-    }
-}
-
-@keyframes blob-two {
-
-    0%,
-    100% {
-        transform: translatey(0);
-    }
-
-    50% {
-        transform: translatey(-420%);
-    }
-}
-
-@keyframes blob-three {
-
-    0%,
-    100% {
-        transform: translatey(0);
-    }
-
-    50% {
-        transform: translatey(-305%);
-    }
-}
-
-@keyframes blob-four {
-
-    0%,
-    100% {
-        transform: translatey(0);
-    }
-
-    50% {
-        transform: translatey(-605%);
-    }
-}
-
-@keyframes blob-five {
-
-    0%,
-    100% {
-        transform: translatey(0);
-    }
-
-    50% {
-        transform: translatey(-700%);
-    }
-}
-
-@keyframes blob-six {
-
-    0%,
-    100% {
-        transform: translatey(0);
-    }
-
-    50% {
-        transform: translatey(-700%);
-    }
-}
-
-@keyframes blob-seven {
-
-    0%,
-    100% {
-        transform: translatey(0);
-    }
-
-    50% {
-        transform: translatey(-300%);
-    }
-}
-
-
-@keyframes wobble {
-    50% {
-        border-radius: 42% 58% 70% 30% / 45% 45% 55% 55%;
-    }
-
-    100% {
-        border-radius: 38% 52% 75% 36% / 50% 40% 50% 60%;
-    }
-}
-
-
-
-
 
 
 /* ---------- drag_box ---------- */
@@ -987,15 +646,6 @@ body {
     /* 부드러운 모션을 위한 트랜지션 속성 */
 }
 
-/* 수직으로 정렬시 참고코드 */
-/*
-.drag_box_inner_btn {
-    display: flex;
-    flex-direction: column;  // 요소들을 수직으로 정렬합니다.
-    justify-content: center; // 요소들을 수직으로 중앙에 정렬합니다.
-    align-items: center;     // 요소들을 수평으로 중앙에 정렬합니다.
-}
-*/
 /* 서랍버튼 첫번째 화살표 */
 .box_arrow_btn {
     position: absolute;
@@ -1014,7 +664,6 @@ body {
 }
 
 .drag_box_inner_btn li {
-    /* display: inline-block; */
     display: flex;
 }
 
@@ -1045,19 +694,14 @@ body {
 
 
 /* 클릭된 위젯버튼에 active 추가 (광선,보라색) */
-
 /* 시계 */
 .widget_active_clock {
     filter: drop-shadow(0px 0px 5px #3D00B2) contrast(1) !important;
 }
-
-
 /* 플리 */
 .widget_active_bgm {
     filter: drop-shadow(0px 0px 5px #3D00B2) contrast(1) !important;
 }
-
-
 /* 나 */
 .widget_active_me {
     filter: drop-shadow(0px 0px 5px #3D00B2) contrast(1) !important;
@@ -1070,25 +714,13 @@ body {
 
 
 
-/* 1365 lap.ver */
-/* 1365 lap.ver */
-/* 1365 lap.ver */
-/* 1365 lap.ver */
-
-
-
-
-
 /* Tb.+Mo.ver */
 /* Tb.+Mo.ver */
 /* Tb.+Mo.ver */
 /* Tb.+Mo.ver */
-
-
 @media (max-width: 768px) {
 
     /* 로딩 */
-
     .loading_img {
         position: absolute;
         transform: translate(-50%, -50%);
@@ -1132,10 +764,8 @@ body {
 
     /* 멤버캠 */
     .cam_wrap {
-        /* background-color: yellow; */
-        /* width: 85%; */
         height: 100%;
-        margin-left: 50px;
+        margin-left: 60px;
         display: inline-block;
         text-align: center;
         margin-top: 105px;
@@ -1153,7 +783,6 @@ body {
     .cam_one_by_one {
         grid-template-columns: repeat(1, 1fr);
         gap: 20px 20px;
-        /* padding-bottom: 300px; */
 
     }
 
@@ -1266,7 +895,6 @@ body {
     }
 
     .bgm_name {
-        /* display: block; */
         color: #fff;
         font-size: 1.3rem;
     }
@@ -1292,15 +920,11 @@ body {
         width: 80%;
     }
 
-    /* IOS 이슈로 top값 변경 */
-    /* 이후로 갤럭시에서 터치가 안되는 이슈.... */
     .controls {
         position: absolute;
         width: 100%;
         top: 85%;
         gap: 10px;
-        /* z-index: 999999!important; */
-        /* margin-top: -4px; */
     }
 
 
@@ -1339,7 +963,7 @@ body {
     /* 멤버캠 */
     .cam_wrap {
         height: 100%;
-        margin-left: 50px;
+        /* margin-left: 50px; */
         margin-top: 95px;
         display: inline-block;
         text-align: center;
@@ -1477,10 +1101,6 @@ body {
     .controls button i {
         font-size: .7rem;
     }
-
-    /* .controls {
-        padding: 0;
-    } */
 
     .player_info {
         position: absolute;
