--- a/css/common.css
+++ b/css/common.css
@@ -6,7 +6,7 @@
     width: 100vw;
     background: radial-gradient(ellipse at bottom, rgb(20, 14, 81), rgb(10, 10, 26));
     position: fixed;
-    z-index: 9999999999999;
+    z-index: 999999999999999999;
 }
 
 .loading_img {
@@ -61,6 +61,7 @@
 }
 
 .tr_com_lang {
+    opacity: .8;
     height: 13px;
     line-height: 0;
     display: inline-block;
@@ -106,11 +107,13 @@
     transform: translateX(130px);
     width: 30px;
     transition: ease-in-out 0.2s;
+    opacity: .7;
 }
 
 .close_btn:hover {
     filter: drop-shadow(0px 0px 2px #333333a4);
     transition: ease-in-out 0.2s;
+    opacity: .7;
 }
 
 .close_btn img {
@@ -125,7 +128,8 @@
     width: 300px;
     text-align: center;
     z-index: 999;
-    height: 465px;
+    /* height: 465px; */
+    height: 445px;
     /* height: 100%; */
 }
 
@@ -165,7 +169,7 @@ swiper-slide {
 
 .bk_common_bg {
     height: 100vh;
-    background-color: rgba(0, 0, 0, 0.7);
+    background-color: rgba(0, 0, 0, 0.8);
     position: fixed;
     z-index: 12;
     width: 100%;
@@ -173,11 +177,13 @@ swiper-slide {
 
 /* 슬라이드 박스 안 */
 .guide_box {
-    background-color: #ffffffef;
+    background-color: #0e0e0e8a;
+    /* 보라배경 test */
+    /* background-color: #2000458a; */
     filter: drop-shadow(0px 0px 2px #333);
     border-radius: 15px;
     width: calc(100% - 10px);
-    padding: 35px 0 41px 0;
+    padding: 35px 0 45px 0;
     margin: 0 auto;
 }
 
@@ -186,7 +192,7 @@ swiper-slide {
     font-size: 2.1rem;
     line-height: 26px;
     font-weight: 900;
-    color: #333;
+    color: #dfdfdf;
     margin-bottom: 10px;
     /* white-space: pre-line; */
     padding: 0 15px;
@@ -200,9 +206,9 @@ swiper-slide {
 }
 
 .sub_text {
-    font-size: 1.3rem;
-    color: #666;
-    line-height: 19px;
+    font-size: 1.2rem;
+    color: #c1c1c1;
+    line-height: 16px;
     margin-bottom: 20px;
     padding: 0 15px;
     font-weight: 600;
@@ -226,7 +232,7 @@ swiper-slide {
     margin-top: 20px;
     line-height: 16px;
     font-weight: 400;
-    color: #666;
+    color: #c1c1c1;
 }
 
 
@@ -590,14 +596,12 @@ html {
 
 
 
-
-
 /* ---------- 헤더 ---------- */
 header {
     height: 33px;
     line-height: 33px;
     position: fixed;
-    z-index: 999999999;
+    z-index: 99999;
     text-align: center;
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.671);
     width: calc(100% - 50px);
@@ -609,6 +613,24 @@ header {
     width: 100%;
     text-align: center;
 }
+
+
+/* 가이드 팝업버튼 */
+.guide_btn {
+    width: 14px;
+    transition: ease-in-out 0.2s;
+    position: absolute;
+    top: 9px;
+    opacity: .6;
+    padding-left: 5px;
+}
+
+.guide_btn:hover {
+    filter: drop-shadow(0px 0px 2px #fff);
+    transition: ease-in-out 0.2s;
+    /* filter: brightness(125%); */
+}
+
 
 /* 방 제목 */
 .title {
@@ -939,15 +961,23 @@ main {
         height: 20px;
         line-height: 20px;
         position: fixed;
-        z-index: 999999999;
+        z-index: 99999;
         text-align: center;
         box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.671);
         width: calc(100% - 50px);
         right: 0;
-        /* background-color: rgba(0, 0, 0, 0.3); */
         background-color: #0000008a;
     }
 
+    .guide_btn {
+        width: 8px;
+        transition: ease-in-out 0.2s;
+        position: absolute;
+        top: 6px;
+        padding-left: 2px;
+        opacity: .6;
+    }
+    
     .title {
         color: #f1f1f1;
         font-size: .9rem;
@@ -1152,7 +1182,7 @@ main {
         height: 20px;
         line-height: 21px;
         position: fixed;
-        z-index: 999999999;
+        z-index: 99999;
         text-align: center;
         box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.671);
         width: calc(100% - 50px);
