--- a/css/swiper-bundle.css
+++ b/css/swiper-bundle.css
@@ -404,7 +404,7 @@
     --swiper-pagination-bullet-width: 8px;
     --swiper-pagination-bullet-height: 8px;
     --swiper-pagination-bullet-border-radius: 50%;
-    --swiper-pagination-bullet-inactive-color: #000;
+    --swiper-pagination-bullet-inactive-color: #fff!important;
     --swiper-pagination-bullet-inactive-opacity: 0.2;
     --swiper-pagination-bullet-opacity: 1;
     --swiper-pagination-bullet-horizontal-gap: 4px;
